fixed artifact when collapsing is diallowed

--- a/docs/test.css
+++ b/docs/test.css
@@ -65,7 +65,7 @@ hr {
 
 pre,
 code {
-	font-family: "Fira Code", "Roboto Mono", Consolas, "Courier New", monospace;
+	font-family: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono", "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro", "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 	font-size: 1rem;
 	font-weight: 400;
 }
